# UA-Navarch

./: .gitignore  Cargo.toml  README.md  compose.yml
scraper/: .gitignore  Cargo.toml  Dockerfile  crontab
scraper/src/: main.rs  main.rs.bak2
scraper/src/parser/: database.rs  parser.rs
scraper/src/scraper/: client.rs  mod.rs  scraper.rs
server/: .dockerignore  .gitignore  Dockerfile  bun.lockb  package.json  svelte.config.js  tsconfig.json
server/src/: app.css  app.html
server/src/lib/: CourseCard.svelte  CourseSearch.svelte  Generator.svelte  MicroSearchBar.svelte  SearchBar.svelte  SectionCard.svelte  Week.svelte  consts.ts  query.svelte.ts  queryStore.svelte.ts  transitions.ts
server/src/lib/components/ui/combobox/: combobox.svelte
server/src/lib/components/ui/input/: input.svelte
server/src/lib/components/ui/select/: select-content.svelte
server/src/lib/server/: database.ts  db.ts
server/src/routes/: +layout.svelte  +page.svelte  SearchComponent.svelte
server/src/routes/about/: +page.svelte
server/src/routes/api/generate/: +server.ts
server/src/routes/api/search/: +server.ts
server/src/routes/course/[department]/[course]/: +page.server.ts  +page.svelte
server/src/routes/course/[department]/[course]/[term]/[section]/: +page.server.ts  +page.svelte
server/src/routes/schedule/: +page.svelte
server/static/: favicon.svg:Zone.Identifier  site.webmanifest  sitemap.xml
src/: main-single.rs.bak  main.rs
