[package]
name = "NavarchScraper"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11"
futures = "0.3"
indicatif = "0.17.8"
reqwest = { version = "0.12", features = ["cookies"] }
tokio = { version = "1.0", features = ["full"] }
sqlite = "0.36.1"
serde_json = "1.0"
html5ever = "0.29.0"
clap = { version = "4.5.20", features = ["derive"] }
http-cache-reqwest = "0.14.0"
reqwest-middleware = "0.3.3"
sha2 = "0.10.8"
openssl = { version = "0.10", features = ["vendored"] }
